--- a/You.html
+++ b/You.html
@@ -1,2 +1,9 @@
-<ul> 
-<
+<head> 
+<link rel="stylesheet"
+      href="style.css"
+      <meta
+  http-equiv="Content-Type"
+  content="text/html";
+  charset=utf-8>
+  <title>Пример веб-страницы</title>
+</head>
