--- a/You.html
+++ b/You.html
@@ -3,7 +3,7 @@
       href="style.css"
       <meta
   http-equiv="Content-Type"
-  content="text/html";
-  charset=utf-8>
+  content="text/html;
+  charset=utf-8">
   <title>Пример веб-страницы</title>
 </head>
