Update and rename .html to me.html

--- a/me.html
+++ b/me.html
@@ -6,4 +6,4 @@
     </h1>
     </body>
   </html> 
-<a href=".html">Перейти на страницу </a> в You.html
+<a href="me.html">Перейти на страницу </a> в You.html
