--- a/Youpage1.html
+++ b/Youpage1.html
@@ -6,5 +6,6 @@
   content="text/html;
   charset=utf-8">
   <title>Пример веб-страницы</title>
-      <a href="me.html">Перейти на страницу </a> в You.html
+      <a href="Youpage1.html.html">Перейти на страницу в mepage2.html</a>
+<a href="Youpage1.html">Перейти на страницу в anotherpage3.html</a>
 </head>
