--- a/mepage2.html
+++ b/mepage2.html
@@ -5,6 +5,5 @@
     <h1>Это моя вторая страница
     </h1>
     </body>
-  <a href="You.html">Перейти на страницу </a> в another.html
+  <a href="mepage2.html.html">Перейти на страницу в anotherpage3.html</a>
   </html> 
-
