--- a/anotherpage3.html
+++ b/anotherpage3.html
@@ -5,5 +5,5 @@
     <h1>Это моя вторая страница
     </h1>
     </body>
-<a href="another.html">Перейти на страницу </a> в me.html
+<a href="anotherpage3.html">Перейти на страницу  в Youpage1.html</a>
   </html> 
