--- a/mepage2.html
+++ b/mepage2.html
@@ -5,5 +5,5 @@
     <h1>Это моя вторая страница
     </h1>
     </body>
-  <a href="mepage2.html.html">Перейти на страницу в anotherpage3.html</a>
+  <a href="mepage2.html.html">anotherpage3.html</a>
   </html> 
