--- a/anotherpage3.html
+++ b/anotherpage3.html
@@ -5,5 +5,5 @@
     <h1>Это моя вторая страница
     </h1>
     </body>
-<a href="anotherpage3.html">Перейти на страницу  в Youpage1.html</a>
+<a href="anotherpage3.html">Youpage1.html</a>
   </html> 
