--- a/Youpage1.html
+++ b/Youpage1.html
@@ -6,6 +6,6 @@
   content="text/html;
   charset=utf-8">
   <title>Пример веб-страницы</title>
-      <a href="Youpage1.html.html">Перейти на страницу в mepage2.html</a>
-<a href="Youpage1.html">Перейти на страницу в anotherpage3.html</a>
+      <a href="Youpage1.html.html">mepage2.html</a>
+<a href="Youpage1.html">anotherpage3.html</a>
 </head>
